# solverforge-quickstarts

./: .gitignore  PRD.md  README.md  progress.txt
.github/workflows/: docker-publish.yml
fast/employee-scheduling-fast/: README.md  pyproject.toml
fast/employee-scheduling-fast/src/employee_scheduling/: __init__.py  constraints.py  converters.py  domain.py  rest_api.py  score_analysis.py
fast/employee-scheduling-fast/static/: app.js  index.html
fast/employee-scheduling-fast/tests/: test_constraints.py  test_feasible.py
fast/maintenance-scheduling-fast/: Dockerfile  README.md  pyproject.toml
fast/maintenance-scheduling-fast/src/maintenance_scheduling/: __init__.py  constraints.py  converters.py  demo_data.py  json_serialization.py  rest_api.py  score_analysis.py
fast/maintenance-scheduling-fast/static/: index.html
fast/maintenance-scheduling-fast/tests/: test_constraints.py
fast/meeting-scheduling-fast/: pyproject.toml
fast/meeting-scheduling-fast/src/meeting_scheduling/: constraints.py  converters.py  demo_data.py  domain.py  json_serialization.py  rest_api.py  score_analysis.py
fast/meeting-scheduling-fast/static/: app.js  index.html
fast/meeting-scheduling-fast/tests/: test_constraints.py  test_feasible.py
fast/order-picking-fast/: README.md  pyproject.toml
fast/order-picking-fast/src/order_picking/: __init__.py  constraints.py  converters.py  demo_data.py  domain.py  json_serialization.py  rest_api.py  solver.py  warehouse.py
fast/order-picking-fast/static/: app.js  index.html  logisim-view.js  style.css
fast/order-picking-fast/tests/: test_constraints.py
fast/portfolio-optimization-fast/: README.md
fast/portfolio-optimization-fast/scripts/: comparison.py
fast/portfolio-optimization-fast/src/portfolio_optimization/: __init__.py  constraints.py  json_serialization.py  solver.py
fast/portfolio-optimization-fast/static/: config.js
fast/portfolio-optimization-fast/tests/: test_portfolio_config.py
fast/vehicle-routing-fast/: README.MD  pyproject.toml
fast/vehicle-routing-fast/src/vehicle_routing/: constraints.py  converters.py  demo_data.py  domain.py  rest_api.py  solver.py
fast/vehicle-routing-fast/static/: app.js  index.html
fast/vehicle-routing-fast/tests/: test_constraints.py  test_demo_data.py  test_feasible.py  test_haversine.py  test_timeline_fields.py
fast/vm-placement-fast/: README.md
fast/vm-placement-fast/src/vm_placement/: rest_api.py  (+1 more)
fast/vm-placement-fast/static/: app.js  index.html
fast/vm-placement-fast/tests/: test_constraints.py
legacy/deploy/argocd/: applicationset.yaml
legacy/employee-scheduling/: pyproject.toml
legacy/employee-scheduling-fast/tests/: test_constraints.py
legacy/employee-scheduling/tests/: test_feasible.py
legacy/flight-crew-scheduling/: pyproject.toml
legacy/flight-crew-scheduling/tests/: test_constraints.py
legacy/hello-world/: pyproject.toml
legacy/hello-world/tests/: test_constraints.py  test_feasible.py
legacy/maintenance-scheduling-fast/static/: app.js  score-analysis.js
legacy/meeting-scheduling-fast/: Dockerfile  README.md
legacy/meeting-scheduling-fast/static/: index.html
legacy/meeting-scheduling-fast/tests/: test_constraints.py  test_feasible.py
legacy/meeting-scheduling/tests/: test_constraints.py  test_feasible.py
legacy/order-picking-fast/tests/: test_constraints.py
legacy/portfolio-optimization-fast/: logging.conf  pyproject.toml
legacy/portfolio-optimization-fast/scripts/: comparison.py
legacy/portfolio-optimization-fast/src/portfolio_optimization/: constraints.py  converters.py  demo_data.py  domain.py  rest_api.py  score_analysis.py
legacy/portfolio-optimization-fast/static/: app.js  index.html
legacy/portfolio-optimization-fast/tests/: test_business_metrics.py  test_constraints.py  test_feasible.py  test_rest_api.py  test_solver_config.py
legacy/school-timetabling/: pyproject.toml
legacy/school-timetabling/tests/: test_constraints.py
legacy/sports-league-scheduling/: pyproject.toml
legacy/sports-league-scheduling/tests/: test_constraints.py
legacy/tournament-scheduling/: pyproject.toml
legacy/tournament-scheduling/tests/: test_constraints.py
legacy/vehicle-routing/: pyproject.toml
legacy/vehicle-routing-fast/: README.MD
legacy/vehicle-routing-fast/static/: index.html
legacy/vehicle-routing-fast/tests/: test_haversine.py  test_routing.py
legacy/vehicle-routing/tests/: test_constraints.py
legacy/vm-placement-fast/: pyproject.toml
legacy/vm-placement-fast/static/: config.js
rust/employee-scheduling/: Cargo.toml  Dockerfile  README.md  solver.toml
rust/employee-scheduling/helm/employee-scheduling/: Chart.yaml  values.yaml
rust/employee-scheduling/helm/employee-scheduling/templates/: NOTES.txt  deployment.yaml
rust/employee-scheduling/src/: api.rs  console.rs  constraints.rs  demo_data.rs  domain.rs  dto.rs  lib.rs  main.rs  solver.rs
rust/employee-scheduling/static/: app.js  index.html
rust/vehicle-routing/: Cargo.toml  Dockerfile  solver.toml
rust/vehicle-routing/helm/vehicle-routing/: Chart.yaml  values.yaml
rust/vehicle-routing/helm/vehicle-routing/templates/: deployment.yaml
rust/vehicle-routing/src/: api.rs  console.rs  constraints.rs  converters.rs  demo_data.rs  domain.rs  dto.rs  geometry.rs  lib.rs  main.rs  routing.rs  solver.rs
rust/vehicle-routing/static/: app.js  index.html  recommended-fit.js  score-analysis.js
(+79 files in other folders)
