[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "vehicle_routing"
version = "1.0.1"
requires-python = ">=3.10"
dependencies = [
    'solverforge-legacy == 1.24.1',
    'fastapi == 0.111.0',
    'pydantic == 2.7.3',
    'uvicorn == 0.30.1',
    'pytest == 8.2.2',
    'osmnx >= 1.9.0',
    'networkx >= 3.0',
    'polyline >= 2.0.0',
    'scikit-learn >= 1.0.0',
]


[project.scripts]
run-app = "vehicle_routing:main"
