[package]
name = "employee-scheduling"
version = "0.4.12"
edition = "2021"
description = "Employee scheduling quickstart for SolverForge"
publish = false

[features]
default = ["console"]
console = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"console\"))"] }

[dependencies]
solverforge = { path = "../../../solverforge-rs/crates/solverforge", features = ["serde", "console"] }
rand = "0.8"

axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
