[package]
name = "vehicle-routing"
version = "0.5.0"
edition = "2021"
description = "Vehicle routing quickstart for SolverForge"
publish = false

[dependencies]
solverforge = { path="../../../solverforge-rs/crates/solverforge", features = ["serde", "console"] }
solverforge-maps = { path = "../../../solverforge-maps" }
rand = "0.8"
rayon = "1"

axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
owo-colors = "4.2"
num-format = "0.4.4"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
async-stream = "0.3"
tokio-stream = "0.1"
futures = "0.3"
